--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<h1><strong>Evho<strong></h1>
 	</div>
 	<div class="tagline">
-		<p>Software Engineer | Ethical Hacker</p>
+		<p>Software Engineer</p>
 	</div>
 	<div class="social">
-		<a href="https://t.me/itsevho" target="_Blank"><i class="hvr-float fab fa-telegram"></i></a>
+		<a href="discord.html" target="_Blank"><i class="hvr-float fab fa-telegram"></i></a>
 		<a class="" href="http://www.twitter.com/itsevho" target="_Blank"><i class="hvr-float fab fa-twitter"></i></a>
 		<a class="" href="https://github.com/itsevho" target="_Blank"><i class="hvr-float fab fa-github"></i></a>
 		<a class="" href="https://www.youtube.com/channel/UCPSBa4pxFFSZXc1kTp-PY5A" target="_Blank"><i class="hvr-float fab fa-youtube"></i></a>
