--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
 </body>
 <script type="text/javascript" src="./js/qwery.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
-<embed src="img/music.mp3" loop="true" hidden="true">
+<embed src="img/music.mp3" loop="true" hidden="true" audio volume="0.2">
 </html>
