--- a/discord.html
+++ b/discord.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="0; url=https://discord.gg/TBzr8N6" />
+<h1 style="text-align: center;">Aqueous Media | Discord</h1>
+<p style="text-align: center;">is currently under construction.</p>
+<p style="text-align: center;">Check back soon.</p>
