--- a/discord.html
+++ b/discord.html
@@ -1,3 +1,4 @@
 <h1 style="text-align: center;">Aqueous Media | Discord</h1>
 <p style="text-align: center;">is currently under construction.</p>
 <p style="text-align: center;">Check back soon.</p>
+<p style="text-align: center;">Thanks.</p>
