--- a/download.html
+++ b/download.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; URL='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" />
+<h1 style="text-align: center;"><strong>Fyre Network | Downloads</strong></h1>
+<h3 style="text-align: center;">Top secret. If you leak this website, you get fired.</h3>
+<p>sCore (HCF Core) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>Helios (Framework) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>Eros (Pot SG) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>fHub (Hub Plugin) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>YeetusSpigot (Spigot Fork) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>YeetusBungee (BungeeCord Fork) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
+<p>&nbsp;</p>
