--- a/download.html
+++ b/download.html
@@ -1,3 +1,6 @@
+border: 10px solid #333333;
+border-radius: 7px 7px 7px 7px;
+
 <h1 style="text-align: center;"><strong>Fyre Network | Downloads</strong></h1>
 <h3 style="text-align: center;">Top secret. If you leak this website, you get fired.</h3>
 <p>sCore (HCF Core) -&nbsp;<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://mega.nz</a></p>
