--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<a class="" href="http://www.twitter.com/itsevho" target="_Blank"><i class="hvr-float fab fa-twitter"></i></a>
 		<a class="" href="https://github.com/itsevho" target="_Blank"><i class="hvr-float fab fa-github"></i></a>
 		<a class="" href="https://www.youtube.com/channel/UCPSBa4pxFFSZXc1kTp-PY5A" target="_Blank"><i class="hvr-float fab fa-youtube"></i></a>
-		<a class="" href="discord.html" target="_Blank"><i class="hvr-float fab fa-discord"></i></a>		
+		<a class="" href="discord.html" target="_Blank"><i class="hvr-float fab fa-discord"></i></a>
+		<a class="" href="https://keybase.io/disclearing" target="_Blank"><i class="hvr-float fab fa-id-card"></i></a>
 	</div>
 </body>
 <script type="text/javascript" src="./js/qwery.js"></script>
