upload new website

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home | Evho</title>
+  <title>About | Evho</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -34,8 +34,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -53,47 +53,9 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h3>Some of my Work</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p><strong>Fyre Network</strong></p>
-      <img src="img/fyre.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>Lunos Network</strong></p>
-      <img src="img/lunos.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>RiftMC Network</strong></p>
-      <img src="img/rift.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p><strong>xxHypur</strong></p>
-      <img src="img/xxhypur.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
+  <h3>About me.</h3><br>
+  <p>Do a bit of everything really.</p>
 </div><br>
-
-<div class="container-fluid bg-3 text-center">    
-  <div class="row">
-    <div class="col-sm-3">
-      <p><strong>HypnosPOS</strong></p>
-      <img src="img/hypnos.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>Watson</strong></p>
-      <img src="img/watson.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>RankMessage</strong></p>
-      <img src="img/rankmessage.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p><strong>Myrios</strong></p>
-      <img src="img/myrios.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
-</div><br><br>
 
 <footer class="container-fluid text-center">
   <p>© Copyright Will Clifford 2019. All rights reserved.</p>
