--- a/index.html
+++ b/index.html
@@ -1,103 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Home | Evho</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <style>
+	<link rel="icon" type="image/png" href="img/icon.ico" />
+	<title>Evho | Home</title>
+	<link href="https://fonts.googleapis.com/css?family=Heebo:300,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/hover.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-    
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-  </style>
+
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="index.html">Will Clifford's Portfolio</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Will Clifford's Portfolio.</h1>      
-    <p>A Software Engineer and UI/UX/Graphics Designer.</p>
-  </div>
-</div>
-  
-<div class="container-fluid bg-3 text-center">    
-  <h3>Some of my Work</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p><strong>Fyre Network</strong></p>
-      <img src="img/fyre.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>Lunos Network</strong></p>
-      <img src="img/lunos.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>RiftMC Network</strong></p>
-      <img src="img/rift.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p><strong>xxHypur</strong></p>
-      <img src="img/xxhypur.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">    
-  <div class="row">
-    <div class="col-sm-3">
-      <p><strong>HypnosPOS</strong></p>
-      <img src="img/hypnos.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>Watson</strong></p>
-      <img src="img/watson.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p><strong>RankMessage</strong></p>
-      <img src="img/rankmessage.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p><strong>Myrios</strong></p>
-      <img src="img/myrios.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
-</div><br><br>
-
-<footer class="container-fluid text-center">
-  <p>© Copyright Will Clifford 2019. All rights reserved.</p>
-</footer>
-
+	<div id="particles-js"></div>
+	</div>
+	<div class="text">
+		<h1><strong>Evho<strong></h1>
+	</div>
+	<div class="tagline">
+		<p>Software Engineer</p>
+	</div>
+	<div class="social">
+		<a href="discord.html" target="_Blank"><i class="hvr-float fab fa-telegram"></i></a>
+		<a class="" href="http://www.twitter.com/itsevho" target="_Blank"><i class="hvr-float fab fa-twitter"></i></a>
+		<a class="" href="https://github.com/itsevho" target="_Blank"><i class="hvr-float fab fa-github"></i></a>
+		<a class="" href="https://www.youtube.com/channel/UCPSBa4pxFFSZXc1kTp-PY5A" target="_Blank"><i class="hvr-float fab fa-youtube"></i></a>
+		<a class="" href="discord.html" target="_Blank"><i class="hvr-float fab fa-discord"></i></a>		
+	</div>
 </body>
+<script type="text/javascript" src="./js/qwery.js"></script>
+<script type="text/javascript" src="./js/script.js"></script>
+<embed src="img/music.mp3" loop="true" hidden="true" audio volume="0.2">
 </html>
