--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
   
 <div class="container-fluid bg-3 text-center">    
   <h3>About me.</h3><br>
-  <p>My name is Will Clifford. I am a software engineer and a graphics designer. I can also do UI/UX design as well as web design.</p>
+  <p>Do a bit of everything really.</p>
 </div><br>
 
 <footer class="container-fluid text-center">
