fix kahoot smasher

--- a/kahoot/index.html
+++ b/kahoot/index.html
@@ -44,21 +44,21 @@ Object.defineProperty(window, 'ysmm', {
 	}
 });
 </script><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Kahoot Hack</title>
+<title>kahoot</title>
 <meta content="Just unpatched! - Hack Kahoot and insane amounts of bots to show your friends how 1337 you are! The best Kahoot cheat ever!" name="description">
 <meta name="keywords" content="kahoot,kahoot hack,kahoot cheat,kahoot ninja,kahoot.ninja,ninja,kahootspam,kahoot smash,kahoot smasher,kahootsmash,kahootsmasher,smash,kahootsmash.org">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1.0, minimum-scale=1.0" media="(device-height: 568px)">
-<link rel="canonical" href="https://itsevho.github.io/kahoot">
+<link rel="canonical" href="https://mem.rip/kahoot/">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="stylesheet" href="./kahoot_files/bootstrap.min.css">
-<link rel="stylesheet" href="./kahoot_files/bootstrap-theme.min.css">
-<script src="./kahoot_files/jquery-2.2.4.min.js.download"></script>
-<script src="./kahoot_files/bootstrap.min.js.download"></script>
-<link rel="stylesheet" href="./kahoot_files/app.css">
-<script src="./kahoot_files/app.js.download"></script>
-<script async="" src="./kahoot_files/f.txt"></script>
-<script async="" src="./kahoot_files/js"></script>
+<link rel="stylesheet" href="./index_files/bootstrap.min.css">
+<link rel="stylesheet" href="./index_files/bootstrap-theme.min.css">
+<script src="./index_files/jquery-2.2.4.min.js.download"></script>
+<script src="./index_files/bootstrap.min.js.download"></script>
+<link rel="stylesheet" href="./index_files/app.css">
+<script src="./index_files/app.js.download"></script>
+<script async="" src="./index_files/f.txt"></script>
+<script async="" src="./index_files/js"></script>
 <script>
    //(adsbygoogle = window.adsbygoogle || []).push({
    // google_ad_client: "ca-pub-3198902270974224",
@@ -73,7 +73,7 @@ Object.defineProperty(window, 'ysmm', {
 <body>
 <div id="hack" style="display: block;">
 <div id="srverr" style="display: none;">
-<svg width="100px" height="100px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-ring" style="background: none;"><circle cx="50" cy="50" fill="none" r="30" stroke="#000000" stroke-width="10"></circle><circle cx="50" cy="50" fill="none" r="30" stroke="#2882fb" stroke-width="10" stroke-linecap="square" transform="rotate(672.983 50 50)"><animatetransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;180 50 50;720 50 50" keyTimes="0;0.5;1" dur="1.3s" begin="0s" repeatCount="indefinite"></animatetransform><animate attributeName="stroke-dasharray" calcMode="linear" values="18.84955592153876 169.64600329384882;94.2477796076938 94.24777960769377;18.84955592153876 169.64600329384882" keyTimes="0;0.5;1" dur="1.3" begin="0s" repeatCount="indefinite"></animate></circle></svg>
+<svg width="100px" height="100px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-ring" style="background: none;"><circle cx="50" cy="50" fill="none" r="30" stroke="#000000" stroke-width="10"></circle><circle cx="50" cy="50" fill="none" r="30" stroke="#2882fb" stroke-width="10" stroke-linecap="square" transform="rotate(484.297 50 50)"><animatetransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;180 50 50;720 50 50" keyTimes="0;0.5;1" dur="1.3s" begin="0s" repeatCount="indefinite"></animatetransform><animate attributeName="stroke-dasharray" calcMode="linear" values="18.84955592153876 169.64600329384882;94.2477796076938 94.24777960769377;18.84955592153876 169.64600329384882" keyTimes="0;0.5;1" dur="1.3" begin="0s" repeatCount="indefinite"></animate></circle></svg>
 <div id="err">Connecting to server...<br>If you're getting this for an extended amount of time please open a ticket in our <a href="https://discord.gg/gKBQage">discord</a>.</div>
 </div>
 <nav class="navbar navbar-default">
@@ -211,7 +211,7 @@ Object.defineProperty(window, 'ysmm', {
 </div>
 </div>
 </div>
-<iframe title="Kahoot" id="kahoot" src="./kahoot_files/saved_resource(1).html" style="display: none;">Your browser is not supported! Please enable iframes and then refresh your browser. If you are having issues with this, you may still use the hack but you won't be able to play kahoot legitimately at the same time! Thanks for using the hack and sorry for the inconvience caused by this issue.</iframe>
+<iframe title="Kahoot" id="kahoot" src="./index_files/saved_resource(1).html" style="display: none;">Your browser is not supported! Please enable iframes and then refresh your browser. If you are having issues with this, you may still use the hack but you won't be able to play kahoot legitimately at the same time! Thanks for using the hack and sorry for the inconvience caused by this issue.</iframe>
 <a id="alert" style="display: none;">Connected to server (v1.0)</a>
 
 
