--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="https://willclifford.blogspot.com/">Blog</a></li>
+        <li><a href="kahoot/index.html">Kahoot Smasher</a></li>
+        <li><a href="games/index.html">Games</a></li>
         <li class="active"><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
