--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   
 <div class="container-fluid bg-3 text-center">    
   <h3>About me.</h3><br>
-  <p>Do a bit of everything really.</p>
+  <p>My name is Will Clifford. I enjoy politics and am an avid supporter of the Conservative and Unionist Party. I am also a passionate programmer and can work with Java, JavaScript, VB.NET and Python.</p>
 </div><br>
 
 <footer class="container-fluid text-center">
